--- a/recall/src/app/app.component.css
+++ b/recall/src/app/app.component.css
@@ -5,6 +5,13 @@
     padding: 0px;
     height: 40px;
 }
+.navigation{
+    background-color:red;
+}
+.content{
+ width:1220px;
+ margin: auto;
+}
 .header{
     z-index: 101;
     position: fixed;
@@ -23,28 +30,31 @@
     height: 275px;
 }
 .left{
-    position: fixed;
+    /* position: fixed; */
+    /* position: sticky;
+    top: 0; */
     padding: 0px;
     width: 18%;
+    float: left;
 }
 .modal-backdrop.fade {
     opacity: 0.7;
 }
 .center {
     background-color: black;
-    margin-left: 18.5%;
     width: 63.0%;
     padding-left: 0px;
     padding-right: 0px;
-     
+    float: left;
 }
 
 .right{
     height: 100%;
     width: 18%;
-    position: fixed;
-    margin-left: 80%;
     padding: 0px;
+    float: left;
+    /* position: sticky;
+    top: 0; */
 }
 .nopadding {
     padding: 0 !important;
@@ -78,9 +88,8 @@
     font-variant: all-petite-caps;
     cursor: pointer;
 }
-.globalchild{
-    width: 98%;
-    margin-left: 1%;
+.globalcontainer{
+  margin-top: 1%;
 }
 .left{height: 100%;}
 .right{height: 100%;}
@@ -108,10 +117,20 @@
     min-height: 0px;
 }
 .menuElements{
-
+    display: inline-block;
     padding: 15px 17px;
     font-size: 14px;
     color: white;
+    /* float: right; */
+    margin-top: 3px;
+}
+
+.img{
+    display: inline-block;
+    /* padding: 15px 17px; */
+    font-size: 14px;
+    color: white;
+    margin-top: 3px;
 }
 .menuElements:hover{
     cursor: pointer;
@@ -120,7 +139,6 @@
 }
 
 .logo{
-   margin-left: 3%;
     margin-top: -3%;
     z-index: 1;
 }
@@ -142,3 +160,6 @@
     color: red;
     background-color: thistle;
   }
+
+
+  
