--- a/recall/src/app/aboutus/aboutus.component.html
+++ b/recall/src/app/aboutus/aboutus.component.html
@@ -1,9 +1,12 @@
-<div class="main">
+<div class="main" style="padding: 38px;">
+  <h2 class="text-center">About Us</h2>
 <div class="chairman">
 <div class="row">
-  <div class="col-md-6">
-  <div class="card" style="color: black;width: 85%;left: 8%;">
-    <img class="card-img-top" src="assets/images/CM-SIR-NEW.jpg" alt="Card image cap">
+  <div class="col-6">
+  <div class="card" style="color: black;width: 85%;left: 8%;padding: 10px;">
+    <div class="imageDiv" style="width: 10%;">
+    <img class="card-img-top" src="assets/images/CM-SIR-NEW.jpg" alt="Card image cap" height="220">
+    </div>
     <div class="card-body">
       <h5 class="card-title">Chairman Message</h5>
       <p class="card-text">
@@ -19,10 +22,7 @@
             <div class="modal-header">
               <img class="card-img-top popimg" src="assets/images/CM-SIR-NEW.jpg" alt="Card image cap">
 
-              <div style="
-              margin-left: 5%;
-              margin-top: 5%;
-          ">
+              <div class="text-center" style="margin-left: 23%;margin-top: 3%;float: left;">
                 <h2>Mohan Babu</h2>
                 <h4>Chairman</h4>
               </div>
@@ -51,9 +51,11 @@
     </div>
   </div>
 </div>
-  <div class="col-md-6">
-  <div class="card" style="color: black;width: 85%;left: 8%;">
-    <img class="card-img-top" src="assets/images/v.jpg" alt="Card image cap">
+  <div class="col-6">
+  <div class="card" style="color: black;width: 85%;left: 8%; padding: 10px">
+    <div class="imageDiv" style="width: 10%;">
+      <img class="card-img-top" src="assets/images/v.jpg" alt="Card image cap" height="220">
+      </div>
     <div class="card-body">
       <h5 class="card-title">CEO Message</h5>
       <p class="card-text">As CEO of Sree Vidyanikethan Educational Institutions, it gives immense pleasure for me to bring in “RECALL“ – a portal in the interest of alumni folks. As alumni of Sree Vidyanikethan...</p>
@@ -66,10 +68,7 @@
             <div class="modal-header">
               <img class="card-img-top popimg" src="assets/images/v.jpg" alt="Card image cap">
 
-              <div style="
-              margin-left: 5%;
-              margin-top: 5%;
-          ">
+              <div style="margin-left: 22%;margin-top: 3%;float: left;         ">
                 <h2>Vishnu</h2>
                 <h4>CEO</h4>
               </div>
