--- a/recall/src/app/login-alumni/login-alumni.component.css
+++ b/recall/src/app/login-alumni/login-alumni.component.css
@@ -9,7 +9,6 @@
     font-size: 15px;
     transition: all 0.4s;
     box-shadow: none;
-    font-variant: normal;
 }
 .form-control:focus {
     border-color: #5cb85c;
@@ -36,7 +35,7 @@
 }    
 .signin-form h2 {
     text-align: center;
-    font-size: 34px;
+    font-size: 30px;
     margin: 0px 0 0px;
     font-family: 'Varela Round', sans-serif;
     color: black;
@@ -46,7 +45,7 @@
     text-align: center;
 }
 .signin-form .form-group {
-    margin-bottom: 10px;
+    margin-bottom: 13px;
 }
 .signin-form .btn {        
     font-size: 18px;
@@ -59,7 +58,7 @@
 }
 .signup-btn {
     text-align: center;
-    border-color: #5cb85c;
+    border-color: #DC143C;
     transition: all 0.4s;
 }
 /* .signup-btn:hover {
@@ -116,4 +115,71 @@
 }
 .social-btn .btn i {
     font-size: 20px;
+}
+
+.alName{
+ padding-top: 20px;
+ margin-bottom: 0;
+ font-size: 30px;
+}
+
+.alBranch{
+font-size: 14px;
+margin-bottom: 5px;
+}
+.alImage
+{
+    border-radius: 5%;
+    height: 100px;
+    margin-left: 33%;
+}
+.year
+{
+    font-size: 10px;
+    margin-left: 1%;
+}
+
+.line{
+    border: 1px solid black;
+    position: relative;
+    /* top: -8%; */
+    margin-top: -12%;
+}
+
+.bgImage{
+    background-image: url("assets/images/strip.jpg");
+    background-attachment: fixed;
+    background-size: 22% 40%;
+    height: 150px;
+}
+.bio{
+    margin-top: 25px;
+    padding: 15px;
+    overflow: hidden;
+    height: 125px;
+    font-size: 14px;
+}
+.logout
+{
+    float: left;
+    border: none;
+    background-color: white;
+    color: red;
+}
+.edit
+{
+    float: right;
+    border: none;
+    background-color: white;
+    color: red;
+}
+.outbut{
+    padding: 10px;
+}
+.loginerror
+{
+    color: red;
+    position: absolute;
+    margin-left: 28px;
+    margin-top: -18px;
 }
