--- a/recall/src/app/testimonial/testimonial.component.html
+++ b/recall/src/app/testimonial/testimonial.component.html
@@ -7,7 +7,7 @@
   <div>
       <img src='assets/images/download.jpg' class='iconDetails'>
   </div>  
-<div style='margin-left:20%;color:white;'>
+<div class="testmonialText">
 <h4>DR. Manchu Mohan Babu <br>Chairman</h4>
 <p id="pg">I have the best memories and biggest learning experiences in life.
 I believe every individual deserves best knowledge to lead a better life and
@@ -18,7 +18,7 @@ knowledge comes with learning – </p>
 <div>
       <img src='assets/images/Sushet-Gautam.jpg' class='iconDetails'>
   </div>  
-<div style='margin-left:20%;color:white;'>
+<div class="testmonialText">
 <h4>DR. Manchu Mohan Babu <br>Chairman</h4>
 <p id="pg">I have the best memories and biggest learning experiences in life.
 I believe every individual deserves best knowledge to lead a better life and
@@ -31,7 +31,7 @@ the imbibed knowledge,disconnecting the superficial parts and connecting sensibl
 <div>
       <img src='assets/images/download.jpg' class='iconDetails'>
   </div>  
-<div style='margin-left:20%;color:white;'>
+<div class="testmonialText">
 <h4>DR. Manchu Mohan Babu <br>Chairman</h4>
 <p id="pg">I have the best memories and biggest learning experiences in life.
 I believe every individual deserves best knowledge to lead a better life and
