--- a/recall/src/app/aboutus/aboutus.component.css
+++ b/recall/src/app/aboutus/aboutus.component.css
@@ -4,11 +4,39 @@
 .popimg{
     margin-left: 5%;
     border-radius: 50%;
-    height: 150px;
+    height: 120px;
     margin-top: 10px;
     width: 150px;
+    float: left;
+}
+p{
+  font-family: roboto;
+  font-size: 17px;
+  font-weight: initial;
+  margin-top: 0;
+  margin-bottom: 1rem;
+  text-shadow: none;
+  font-variant: none;
 }
 
+.card-body{
+  padding: 10px;
+}
+.card-title
+{
+  font-variant: none;
+  font-weight: 600;
+
+}
+.chairman
+{
+  padding-top: 25px;
+}
+.col-6
+{
+  width: 50%;
+  float: left;
+}
 @media (min-width: 768px) {
     .modal-dialog {
       width: 900;
