--- a/recall/src/app/login-alumni/login-alumni.component.html
+++ b/recall/src/app/login-alumni/login-alumni.component.html
@@ -1,16 +1,18 @@
 <div class="signin-form form">
   <div class="form" *ngIf="!isLogin">
-  <!-- <form action="/examples/actions/confirmation.php" method="post"> -->
-  <h2 style="padding-top: 10px;">Alumni LogIn</h2>
+  <h2 style="padding: 20px;">Alumni LogIn</h2>
+  <div class="text-center small loginerror" *ngIf="loginError" style="color: red;position: absolute;">Username or Password error..</div>
   <div class="inputread">
+  
       <div class="form-group">
         <input type="text" #uname class="form-control input-lg" name="username" [(ngModel)] = "user.username" placeholder="Username" required="required">
       </div>
   <div class="form-group">
           <input type="password" #pwd class="form-control input-lg" name="password" [(ngModel)] = "user.password" placeholder="Password" required="required">
       </div>  
+     
       <div class="form-group">
-          <button type="submit" class="btn btn-success btn-lg btn-block signup-btn" (click)="validateUser()">Sign in</button>
+          <button type="submit" class="btn btn-success btn-lg btn-block signup-btn" (click)="validateUser()" style="background-color: #DC143C;">Sign in</button>
       </div>
       <div class="text-center small"><a href="#">Forgot Your password?</a></div>
     </div>
@@ -19,10 +21,26 @@
       <a href="#" class="btn btn-info btn-lg" title="Twitter"><i class="fa fa-twitter"></i></a>
       <a href="#" class="btn btn-danger btn-lg" title="Google"><i class="fa fa-google"></i></a>
     </div>
-  <!-- </form> -->
+    <div class="text-center small" style="margin-top: 20px;">Don't have an account? <a href="#">Sign up</a></div>
   </div>
-  <div *ngIf="isLogin">
-    Success
+  <div class="profiletemp" *ngIf="isLogin">
+    <div>
+      <div class="bgImage">
+    <h4 class="text-center alName">Ahmad Shaik</h4>
+    <p class="text-center alBranch">Computer science<span class="year">(2020)</span></p>
+ 
+      
+    <img class="alImage" src="assets/images/download.jpg" alt="alumnilogo">
+    </div>
+  
+    </div>
+    <div class="bio">
+    <p> writes and maintains clean and versatile web applications for our online services, as well as our intranet. In her free time she likes althetics and martial arts training, hanging on top of buildings and seducing Batman.y</p>
+    </div>
+    <div class="outbut">
+      <button class="logout">Logout</button>
+      <button class="edit" [routerLink]="['/updateProfile']" >update Profile</button>
+    </div>
   </div>
-  <!-- <div class="text-center small">Don't have an account? <a href="#">Sign up</a></div> -->
+  <!--  -->
 </div>
