--- a/recall/src/app/login-alumni/login-alumni.component.html
+++ b/recall/src/app/login-alumni/login-alumni.component.html
@@ -21,7 +21,7 @@
       <a href="#" class="btn btn-info btn-lg" title="Twitter"><i class="fa fa-twitter"></i></a>
       <a href="#" class="btn btn-danger btn-lg" title="Google"><i class="fa fa-google"></i></a>
     </div>
-    <div class="text-center small" style="margin-top: 20px;">Don't have an account? <a href="#">Sign up</a></div>
+    <div class="text-center small" style="margin-top: 20px;">Don't have an account? <a href="" [routerLink]="['/registerWithUs']">Sign up</a></div>
   </div>
   <div class="profiletemp" *ngIf="isLogin">
     <div>
