--- a/recall/src/app/app.component.css
+++ b/recall/src/app/app.component.css
@@ -81,7 +81,7 @@
  .span12{
      height: 100%;;
      align-items: center;
-     padding-left: 10px;
+
  }
 .quizArea{
     height: 100%;
@@ -204,4 +204,49 @@
     font-size: 18px;
   }
 
-  
+  .profilecard
+  {
+      height: 100%;
+      width: 100%;
+  }
+  .imagecard{
+      height: 35%;
+  }
+  .profileinfo
+  {
+      padding: 10px;
+      font-variant: normal;
+  }
+  .about{
+    font-size: 11px;
+    /* font-family: roboto; */
+    font-weight: 500;
+    overflow: hidden;
+
+  }
+  .prev{
+    position: absolute;
+    font-size: 50px;
+    top: 35%;
+    opacity: 0.2;
+  }
+  .prev:hover, .next:hover{
+      cursor: pointer;
+  }
+  .next{
+    position: absolute;
+    font-size: 50px;
+    top: 35%;
+    left: 92.5%;
+    opacity: 0.2;
+  }
+  .titlealumni
+  {
+    font-size: 27px;
+    font-family: roboto;
+    font-variant: none;
+    padding: 15px;
+    background-color: #DC143C;
+    margin-bottom: 0;
+    padding-bottom: 10px;
+  }
