--- a/recall/src/app/app.component.html
+++ b/recall/src/app/app.component.html
@@ -104,6 +104,7 @@
             <h5 class="text-center" style="font-size: 15px;">{{profiles[slideNo].branch}}</h5>
             <p class="about">{{profiles[slideNo].aboutprofile}}</p>
           </div>
+          <button class="view" [routerLink]="['/Alumni-Profiles']">View more...</button>
        </div>
       </div>
       <div class="span12 col down">
