--- a/recall/src/app/alumniprofiles/alumniprofiles.component.html
+++ b/recall/src/app/alumniprofiles/alumniprofiles.component.html
@@ -1,3 +1,13 @@
-<p>
-  alumniprofiles works!
-</p>
+<div class="main">
+  <h3 class="text-center" style="padding-top: 20px;"> Alumni</h3>
+<div class="profilecards">
+  <div *ngFor="let profile of profiles" class="card profile">
+       <h1 class="text-center name">{{profile.name}}</h1>
+       <div class="profileimage">
+         <img src={{profile.profile}} alt="" height="100%" width="100%" style="border-radius: 10px;">
+       </div>
+       <h6 class="text-center posting">{{profile.designation}} @ {{profile.company}}</h6>
+       <p class="about">{{profile.aboutprofile}}</p>
+  </div>
+</div>
+</div>
