--- a/recall/src/app/app.component.css
+++ b/recall/src/app/app.component.css
@@ -8,6 +8,9 @@
 .navigation{
     background-color:red;
 }
+button:focus{
+    outline: none;
+}
 .fa22ha
 {
     height: 38px;
@@ -249,4 +252,15 @@
     background-color: #DC143C;
     margin-bottom: 0;
     padding-bottom: 10px;
+  }
+  .view
+  {
+    float: right;
+    position: absolute;
+    top: 66%;
+    right: 6%;
+    background: none;
+    color: #DC143C;
+    border: none;
+    font-variant: none;
   }
