--- a/recall/src/app/givingtous/givingtous.component.html
+++ b/recall/src/app/givingtous/givingtous.component.html
@@ -1,3 +1,12 @@
-<p>
-  givingtous works!
-</p>
+<div class="main">
+ <div class="top">
+   <div class="bar"></div>
+  <div class="headtext">
+     <h3 style="font-size: 27px;">Giving to Vidyanikethan</h3>
+     <small class="givequote">Your contribution could change lives and make tomorrow better</small>
+  </div>
+ </div>
+ <div class="content">
+
+ </div>
+</div>
