--- a/recall/src/app/login-alumni/login-alumni.component.html
+++ b/recall/src/app/login-alumni/login-alumni.component.html
@@ -1,6 +1,6 @@
 <div class="signin-form form">
   <div class="form" *ngIf="!isLogin">
-  <h2 style="padding: 20px;">Alumni LogIn</h2>
+  <h2 >Alumni LogIn</h2>
   <div class="text-center small loginerror" *ngIf="loginError" style="color: red;position: absolute;">Username or Password error..</div>
   <div class="inputread">
   
