--- a/recall/src/app/aboutus/aboutus.component.html
+++ b/recall/src/app/aboutus/aboutus.component.html
@@ -1,4 +1,4 @@
-<div class="main" style="padding: 38px;background-color: gray;height: 100%;">
+<div class="main" style="padding: 38px;background-color: #abafae;height: 100%;">
   <h2 class="text-center">About Us</h2>
 <div class="chairman">
 <div class="row">
