--- a/recall/src/app/app.component.html
+++ b/recall/src/app/app.component.html
@@ -36,9 +36,9 @@
           <div class="collapse navbar-collapse" id="myNavbar2" >
               <ul class="nav navbar-nav cust-nav text-uppercase navbar-right" >
                   <li class="menuElements">SVET</li>
-                  <li class="menuElements">Alumni Chapters</li>
-                  <li class="menuElements">Alumni Directory</li>
-                  <li class="menuElements">Community</li>
+                  <li class="menuElements" (click)="testimonial()" [routerLink]="['/Alumni-Chapters']">Alumni Chapters</li>
+                  <li class="menuElements" (click)="testimonial()" [routerLink]="['/Alumni-Directory']">Alumni Directory</li>
+                  <li class="menuElements" (click)="testimonial()" [routerLink]="['/Community']">Community</li>
                   <li class="menuElements" (click)="testimonial()" [routerLink]="['/Gallery']">Gallery </li>
                   <li class="menuElements" (click)="testimonial()" [routerLink]="['/givingtoVidyanikethan']"> Giving to Vidyanikethan </li>
                   <li class="menuElements" (click)="testimonial()" [routerLink]="['/alumniTestimonials']"> Testimonials</li>
