--- a/recall/src/app/contactus/contactus.component.css
+++ b/recall/src/app/contactus/contactus.component.css
@@ -57,5 +57,14 @@ body{
 .message{
     color: black;
     margin-top: 25px;
-    margin-bottom: 25px;
+    margin-bottom: 25px;    
+    font-family: roboto;
+    font-weight: 600;
+}
+.successmessage{
+    color: black;
+    font-size: 20px;
+    font-family: roboto;
+    padding-top: 30px;
+    font-weight: 500;
 }
