--- a/recall/src/app/contactus/contactus.component.html
+++ b/recall/src/app/contactus/contactus.component.html
@@ -14,37 +14,45 @@
     </div>
   </div>
   <div class="col-9">
-    <div class="contact-form">
+    <div *ngIf="!isFeedBacsubmited" class="contact-form">
       <h4 class="text-center message">We would love to hear from you !</h4>
+      <form [formGroup]="feedBackform">
       <div class="form-group">
         <label class="control-label col-2" for="fname">First Name:</label>
         <div class="col-10">          
-        <input type="text" class="form-control" id="fname" placeholder="Enter First Name" name="fname">
+        <input type="text" class="form-control" id="fname" placeholder="Enter First Name"  formControlName="firstname">
         </div>
       </div>
       <div class="form-group">
         <label class="control-label col-2" for="lname">Last Name:</label>
         <div class="col-10">          
-        <input type="text" class="form-control" id="lname" placeholder="Enter Last Name" name="lname">
+        <input type="text" class="form-control" id="lname" placeholder="Enter Last Name"  formControlName="lastname">
         </div>
       </div>
       <div class="form-group">
         <label class="control-label col-2" for="email">Email:</label>
         <div class="col-10">
-        <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
+        <input type="email" class="form-control" id="email" placeholder="Enter email" formControlName="email">
         </div>
       </div>
       <div class="form-group">
         <label class="control-label col-2" for="comment">Comment:</label>
         <div class="col-10">
-        <textarea class="form-control" rows="5" id="comment"></textarea>
+        <textarea  formControlName="comment" class="form-control" rows="5" id="comment"></textarea>
         </div>
       </div>
       <div class="form-group">        
         <div class="col-offset-2 col-10">
-        <button type="submit" class="btn btn-default">Submit</button>
+        <button type="submit" (click)="Comment()" class="btn btn-default">Submit</button>
         </div>
       </div>
+    </form>
+    </div>
+    <div *ngIf="isFeedBacsubmited">
+      <h4 class="text-center message">Thank you for your feedback</h4>
+           <div class="successmessage">
+            Feedback submited Succesfully.We will respond to you as early as possible.
+           </div>
     </div>
   </div>
 </div>
